--- a/.github/workflows/release-pipeline.yml
+++ b/.github/workflows/release-pipeline.yml
@@ -10,34 +10,49 @@ jobs:
     runs-on: windows-latest
     
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
-        
-      - name: Setup .NET
+        with:
+          fetch-depth: 0
+
+      - name: .NET Setup
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
-          
-      - name: Restore dependencies
-        run: dotnet restore
-        
-      - name: Build solution
-        run: dotnet build --configuration Release --no-restore
-        
-      - name: Publish Windows x64
-        run: dotnet publish -c Release -r win-x64 --self-contained true /p:PublishSingleFile=true /p:PublishTrimmed=true -o ./publish/win-x64
-        
+
+      - name: Fetch submodules
+        run: git submodule update --init --recursive
+
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.1
+
+      - name: Setup NuGet
+        uses: NuGet/setup-nuget@v1.0.2
+
+      - name: Navigate to workspace
+        run: cd $GITHUB_WORKSPACE
+
+      - name: Restore packages
+        run: nuget restore UAssetGUI.sln
+
+      - name: Build
+        run: msbuild UAssetGUI.sln /p:Configuration=Release     
+
       - name: Create ZIP archive for Windows
         run: |
-          Compress-Archive -Path ./publish/win-x64/* -DestinationPath ./UAssetGUI_Windows_x64_cn.zip
+          $zipPath = "UAssetGUI_Windows_x64_cn.zip"
+          $sourcePath = "UAssetGUI/bin/Release/net8.0-windows-x64/publish/"
+          $destinationPath = "$GITHUB_WORKSPACE/$zipPath"
+          Compress-Archive -Path "$sourcePath*" -DestinationPath $destinationPath -Force
+          Write-Host "ZIP archive created at $destinationPath"
           
       # 根据需要添加其他平台的构建步骤
-      
       - name: Upload to GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
-          files: |
-            ./UAssetGUI_Windows_x64_cn.zip
-            # 可以添加其他平台的压缩包
+          tag_name: ${{ github.event.release.tag_name }}
+          files: UAssetGUI_Windows_x64_cn.zip
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
